--- a/дз/index.html
+++ b/дз/index.html
@@ -34,7 +34,11 @@ What here shall miss, our toil shall strive to mend.
 <h3><i> Enter  SAMPSON and GREGORY , of the house of Capulet, armed with swords and bucklers</i></h3>
 <h2>SAMPSON</h2>
 <h3>No, for then we should be colliers.</h3>
+<p id="non">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, ad magni reprehenderit odio odit molestiae perferendis ipsum distinctio illo esse? Fugiat illo laborum natus magni maiores facilis explicabo excepturi non?</p>
+
 
     </main>
+
+    <a href="card.html"></a>
 </body>
 </html>
