--- a/дз/index.html
+++ b/дз/index.html
@@ -39,6 +39,7 @@ What here shall miss, our toil shall strive to mend.
 
     </main>
 
-    <a href="card.html"></a>
+    <a href="card.html">карты
+    </a>
 </body>
 </html>
