--- a/дз/tags.html
+++ b/дз/tags.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Акватерапия</title>
 </head>
 <body>
 <main>
@@ -25,7 +25,11 @@
         <p class="head_txt">Укрепление здоровья</p>
         <h2>Акватерапия
             RitmStyle</h2>
+            <img class="fdf" src="img/лепесток.png" >
+            <img class="h" src="img/лепесток 2.png" >
+            
 </main>
+<img src="img/icn.png" >
 <div class="maps"><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A08fd35c3a17bf20c1dabe917aae72523b401edb9f02cf40d76d918d40da52817&amp;width=856&amp;height=604&amp;lang=ru_RU&amp;scroll=true"></script></div>
 </body>
 </html>
